--- a/renderer.html
+++ b/renderer.html
@@ -220,7 +220,7 @@
         // main
         void main() {
             float time = time * 0.3;
-            vec2 fragCoord = texture(srcMap, gl_FragCoord.xy / iIntResolution).xy * iResolution;
+            vec2 fragCoord = (vec2(0.0, 1.0) - texture(srcMap, gl_FragCoord.xy / iIntResolution).zy) * vec2(-1.0, 1.0) * iResolution;
             
         #ifdef AA
             vec3 color = vec3(0.0);
@@ -236,7 +236,8 @@
         #endif
             
             // post
-            gl_FragColor = vec4(fragCoord / iResolution, 0, 1);
+            gl_FragColor = vec4(color, 1.0);
+            //gl_FragColor = vec4(fragCoord / iResolution, 0, 1);
             //vec4 fragColor = vec4(pow(color, vec3(0.65, 0.65, 0.65)), 1.0);
             //gl_FragColor = fragColor;
         }
